parser/turnkey_parser.go
// Code generated from TurnkeyParser.g4 by ANTLR 4.8. DO NOT EDIT.

package parser // TurnkeyParser

import (
	"fmt"
	"reflect"
	"strconv"

	"github.com/antlr/antlr4/runtime/Go/antlr"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = reflect.Copy
var _ = strconv.Itoa

var deserializer = antlr.NewATNDeserializer(nil)
var deserializedATN = deserializer.DeserializeFromUInt16(parserATN)

var literalNames = []string{
	"", "", "','", "'func'", "'turn'", "'*'", "'/'", "'+'", "'-'", "'='", "'('",
	"')'", "'{'", "'}'",
}
var symbolicNames = []string{
	"", "WS", "COMMA", "FUNC", "TURN", "MUL", "DIV", "ADD", "SUB", "ASSIGN",
	"LPAREN", "RPAREN", "LBRACE", "RBRACE", "INT", "FLOAT", "BOOL", "IDENT",
	"OPEN_STRING", "STRING", "CLOSE_STRING",
}

var ruleNames = []string{
	"start", "statement", "block", "func_def", "parameters", "expression",
	"int_expression", "float_expression", "bool_expression", "ident_expression",
	"call_expression",
}
var decisionToDFA = make([]*antlr.DFA, len(deserializedATN.DecisionToState))

func init() {
	for index, ds := range deserializedATN.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(ds, index)
	}
}

type TurnkeyParser struct {
	*antlr.BaseParser
}

func NewTurnkeyParser(input antlr.TokenStream) *TurnkeyParser {
	this := new(TurnkeyParser)

	this.BaseParser = antlr.NewBaseParser(input)

	this.Interpreter = antlr.NewParserATNSimulator(this, deserializedATN, decisionToDFA, antlr.NewPredictionContextCache())
	this.RuleNames = ruleNames
	this.LiteralNames = literalNames
	this.SymbolicNames = symbolicNames
	this.GrammarFileName = "TurnkeyParser.g4"

	return this
}

// TurnkeyParser tokens.
const (
	TurnkeyParserEOF          = antlr.TokenEOF
	TurnkeyParserWS           = 1
	TurnkeyParserCOMMA        = 2
	TurnkeyParserFUNC         = 3
	TurnkeyParserTURN         = 4
	TurnkeyParserMUL          = 5
	TurnkeyParserDIV          = 6
	TurnkeyParserADD          = 7
	TurnkeyParserSUB          = 8
	TurnkeyParserASSIGN       = 9
	TurnkeyParserLPAREN       = 10
	TurnkeyParserRPAREN       = 11
	TurnkeyParserLBRACE       = 12
	TurnkeyParserRBRACE       = 13
	TurnkeyParserINT          = 14
	TurnkeyParserFLOAT        = 15
	TurnkeyParserBOOL         = 16
	TurnkeyParserIDENT        = 17
	TurnkeyParserOPEN_STRING  = 18
	TurnkeyParserSTRING       = 19
	TurnkeyParserCLOSE_STRING = 20
)

// TurnkeyParser rules.
const (
	TurnkeyParserRULE_start            = 0
	TurnkeyParserRULE_statement        = 1
	TurnkeyParserRULE_block            = 2
	TurnkeyParserRULE_func_def         = 3
	TurnkeyParserRULE_parameters       = 4
	TurnkeyParserRULE_expression       = 5
	TurnkeyParserRULE_int_expression   = 6
	TurnkeyParserRULE_float_expression = 7
	TurnkeyParserRULE_bool_expression  = 8
	TurnkeyParserRULE_ident_expression = 9
	TurnkeyParserRULE_call_expression  = 10
)

// IStartContext is an interface to support dynamic dispatch.
type IStartContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsStartContext differentiates from other interfaces.
	IsStartContext()
}

type StartContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyStartContext() *StartContext {
	var p = new(StartContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = TurnkeyParserRULE_start
	return p
}

func (*StartContext) IsStartContext() {}

func NewStartContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *StartContext {
	var p = new(StartContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = TurnkeyParserRULE_start

	return p
}

func (s *StartContext) GetParser() antlr.Parser { return s.parser }

func (s *StartContext) Statement() IStatementContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IStatementContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IStatementContext)
}

func (s *StartContext) EOF() antlr.TerminalNode {
	return s.GetToken(TurnkeyParserEOF, 0)
}

func (s *StartContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *StartContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *StartContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(TurnkeyParserListener); ok {
		listenerT.EnterStart(s)
	}
}

func (s *StartContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(TurnkeyParserListener); ok {
		listenerT.ExitStart(s)
	}
}

func (p *TurnkeyParser) Start() (localctx IStartContext) {
	localctx = NewStartContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, TurnkeyParserRULE_start)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(22)
		p.Statement()
	}
	{
		p.SetState(23)
		p.Match(TurnkeyParserEOF)
	}

	return localctx
}

// IStatementContext is an interface to support dynamic dispatch.
type IStatementContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsStatementContext differentiates from other interfaces.
	IsStatementContext()
}

type StatementContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyStatementContext() *StatementContext {
	var p = new(StatementContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = TurnkeyParserRULE_statement
	return p
}

func (*StatementContext) IsStatementContext() {}

func NewStatementContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *StatementContext {
	var p = new(StatementContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = TurnkeyParserRULE_statement

	return p
}

func (s *StatementContext) GetParser() antlr.Parser { return s.parser }

func (s *StatementContext) Expression() IExpressionContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IExpressionContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IExpressionContext)
}

func (s *StatementContext) Func_def() IFunc_defContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IFunc_defContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IFunc_defContext)
}

func (s *StatementContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *StatementContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *StatementContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(TurnkeyParserListener); ok {
		listenerT.EnterStatement(s)
	}
}

func (s *StatementContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(TurnkeyParserListener); ok {
		listenerT.ExitStatement(s)
	}
}

func (p *TurnkeyParser) Statement() (localctx IStatementContext) {
	localctx = NewStatementContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, TurnkeyParserRULE_statement)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.SetState(27)
	p.GetErrorHandler().Sync(p)

	switch p.GetTokenStream().LA(1) {
	case TurnkeyParserINT, TurnkeyParserFLOAT, TurnkeyParserBOOL, TurnkeyParserIDENT:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(25)
			p.Expression()
		}

	case TurnkeyParserFUNC:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(26)
			p.Func_def()
		}

	default:
		panic(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
	}

	return localctx
}

// IBlockContext is an interface to support dynamic dispatch.
type IBlockContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsBlockContext differentiates from other interfaces.
	IsBlockContext()
}

type BlockContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyBlockContext() *BlockContext {
	var p = new(BlockContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = TurnkeyParserRULE_block
	return p
}

func (*BlockContext) IsBlockContext() {}

func NewBlockContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *BlockContext {
	var p = new(BlockContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = TurnkeyParserRULE_block

	return p
}

func (s *BlockContext) GetParser() antlr.Parser { return s.parser }

func (s *BlockContext) LBRACE() antlr.TerminalNode {
	return s.GetToken(TurnkeyParserLBRACE, 0)
}

func (s *BlockContext) RBRACE() antlr.TerminalNode {
	return s.GetToken(TurnkeyParserRBRACE, 0)
}

func (s *BlockContext) AllExpression() []IExpressionContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*IExpressionContext)(nil)).Elem())
	var tst = make([]IExpressionContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(IExpressionContext)
		}
	}

	return tst
}

func (s *BlockContext) Expression(i int) IExpressionContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IExpressionContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(IExpressionContext)
}

func (s *BlockContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *BlockContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *BlockContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(TurnkeyParserListener); ok {
		listenerT.EnterBlock(s)
	}
}

func (s *BlockContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(TurnkeyParserListener); ok {
		listenerT.ExitBlock(s)
	}
}

func (p *TurnkeyParser) Block() (localctx IBlockContext) {
	localctx = NewBlockContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, TurnkeyParserRULE_block)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(29)
		p.Match(TurnkeyParserLBRACE)
	}
	p.SetState(33)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	for ((_la)&-(0x1f+1)) == 0 && ((1<<uint(_la))&((1<<TurnkeyParserINT)|(1<<TurnkeyParserFLOAT)|(1<<TurnkeyParserBOOL)|(1<<TurnkeyParserIDENT))) != 0 {
		{
			p.SetState(30)
			p.Expression()
		}

		p.SetState(35)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)
	}
	{
		p.SetState(36)
		p.Match(TurnkeyParserRBRACE)
	}

	return localctx
}

// IFunc_defContext is an interface to support dynamic dispatch.
type IFunc_defContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsFunc_defContext differentiates from other interfaces.
	IsFunc_defContext()
}

type Func_defContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyFunc_defContext() *Func_defContext {
	var p = new(Func_defContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = TurnkeyParserRULE_func_def
	return p
}

func (*Func_defContext) IsFunc_defContext() {}

func NewFunc_defContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *Func_defContext {
	var p = new(Func_defContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = TurnkeyParserRULE_func_def

	return p
}

func (s *Func_defContext) GetParser() antlr.Parser { return s.parser }

func (s *Func_defContext) FUNC() antlr.TerminalNode {
	return s.GetToken(TurnkeyParserFUNC, 0)
}

func (s *Func_defContext) IDENT() antlr.TerminalNode {
	return s.GetToken(TurnkeyParserIDENT, 0)
}

func (s *Func_defContext) LPAREN() antlr.TerminalNode {
	return s.GetToken(TurnkeyParserLPAREN, 0)
}

func (s *Func_defContext) Parameters() IParametersContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IParametersContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IParametersContext)
}

func (s *Func_defContext) RPAREN() antlr.TerminalNode {
	return s.GetToken(TurnkeyParserRPAREN, 0)
}

func (s *Func_defContext) Block() IBlockContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IBlockContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IBlockContext)
}

func (s *Func_defContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *Func_defContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *Func_defContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(TurnkeyParserListener); ok {
		listenerT.EnterFunc_def(s)
	}
}

func (s *Func_defContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(TurnkeyParserListener); ok {
		listenerT.ExitFunc_def(s)
	}
}

func (p *TurnkeyParser) Func_def() (localctx IFunc_defContext) {
	localctx = NewFunc_defContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 6, TurnkeyParserRULE_func_def)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(38)
		p.Match(TurnkeyParserFUNC)
	}
	{
		p.SetState(39)
		p.Match(TurnkeyParserIDENT)
	}
	{
		p.SetState(40)
		p.Match(TurnkeyParserLPAREN)
	}
	{
		p.SetState(41)
		p.Parameters()
	}
	{
		p.SetState(42)
		p.Match(TurnkeyParserRPAREN)
	}
	{
		p.SetState(43)
		p.Block()
	}

	return localctx
}

// IParametersContext is an interface to support dynamic dispatch.
type IParametersContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsParametersContext differentiates from other interfaces.
	IsParametersContext()
}

type ParametersContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyParametersContext() *ParametersContext {
	var p = new(ParametersContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = TurnkeyParserRULE_parameters
	return p
}

func (*ParametersContext) IsParametersContext() {}

func NewParametersContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ParametersContext {
	var p = new(ParametersContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = TurnkeyParserRULE_parameters

	return p
}

func (s *ParametersContext) GetParser() antlr.Parser { return s.parser }

func (s *ParametersContext) AllIDENT() []antlr.TerminalNode {
	return s.GetTokens(TurnkeyParserIDENT)
}

func (s *ParametersContext) IDENT(i int) antlr.TerminalNode {
	return s.GetToken(TurnkeyParserIDENT, i)
}

func (s *ParametersContext) AllCOMMA() []antlr.TerminalNode {
	return s.GetTokens(TurnkeyParserCOMMA)
}

func (s *ParametersContext) COMMA(i int) antlr.TerminalNode {
	return s.GetToken(TurnkeyParserCOMMA, i)
}

func (s *ParametersContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ParametersContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ParametersContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(TurnkeyParserListener); ok {
		listenerT.EnterParameters(s)
	}
}

func (s *ParametersContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(TurnkeyParserListener); ok {
		listenerT.ExitParameters(s)
	}
}

func (p *TurnkeyParser) Parameters() (localctx IParametersContext) {
	localctx = NewParametersContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 8, TurnkeyParserRULE_parameters)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	var _alt int

	p.EnterOuterAlt(localctx, 1)
	p.SetState(49)
	p.GetErrorHandler().Sync(p)
	_alt = p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 2, p.GetParserRuleContext())

	for _alt != 2 && _alt != antlr.ATNInvalidAltNumber {
		if _alt == 1 {
			{
				p.SetState(45)
				p.Match(TurnkeyParserIDENT)
			}
			{
				p.SetState(46)
				p.Match(TurnkeyParserCOMMA)
			}

		}
		p.SetState(51)
		p.GetErrorHandler().Sync(p)
		_alt = p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 2, p.GetParserRuleContext())
	}
	p.SetState(53)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	if _la == TurnkeyParserIDENT {
		{
			p.SetState(52)
			p.Match(TurnkeyParserIDENT)
		}

	}

	return localctx
}

// IExpressionContext is an interface to support dynamic dispatch.
type IExpressionContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsExpressionContext differentiates from other interfaces.
	IsExpressionContext()
}

type ExpressionContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyExpressionContext() *ExpressionContext {
	var p = new(ExpressionContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = TurnkeyParserRULE_expression
	return p
}

func (*ExpressionContext) IsExpressionContext() {}

func NewExpressionContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ExpressionContext {
	var p = new(ExpressionContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = TurnkeyParserRULE_expression

	return p
}

func (s *ExpressionContext) GetParser() antlr.Parser { return s.parser }

func (s *ExpressionContext) Int_expression() IInt_expressionContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IInt_expressionContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IInt_expressionContext)
}

func (s *ExpressionContext) Float_expression() IFloat_expressionContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IFloat_expressionContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IFloat_expressionContext)
}

func (s *ExpressionContext) Bool_expression() IBool_expressionContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IBool_expressionContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IBool_expressionContext)
}

func (s *ExpressionContext) Ident_expression() IIdent_expressionContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IIdent_expressionContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IIdent_expressionContext)
}

func (s *ExpressionContext) Call_expression() ICall_expressionContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*ICall_expressionContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(ICall_expressionContext)
}

func (s *ExpressionContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ExpressionContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ExpressionContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(TurnkeyParserListener); ok {
		listenerT.EnterExpression(s)
	}
}

func (s *ExpressionContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(TurnkeyParserListener); ok {
		listenerT.ExitExpression(s)
	}
}

func (p *TurnkeyParser) Expression() (localctx IExpressionContext) {
	localctx = NewExpressionContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 10, TurnkeyParserRULE_expression)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.SetState(60)
	p.GetErrorHandler().Sync(p)
	switch p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 4, p.GetParserRuleContext()) {
	case 1:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(55)
			p.int_expression(0)
		}

	case 2:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(56)
			p.float_expression(0)
		}

	case 3:
		p.EnterOuterAlt(localctx, 3)
		{
			p.SetState(57)
			p.Bool_expression()
		}

	case 4:
		p.EnterOuterAlt(localctx, 4)
		{
			p.SetState(58)
			p.Ident_expression()
		}

	case 5:
		p.EnterOuterAlt(localctx, 5)
		{
			p.SetState(59)
			p.Call_expression()
		}

	}

	return localctx
}

// IInt_expressionContext is an interface to support dynamic dispatch.
type IInt_expressionContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// GetOp returns the op token.
	GetOp() antlr.Token

	// SetOp sets the op token.
	SetOp(antlr.Token)

	// IsInt_expressionContext differentiates from other interfaces.
	IsInt_expressionContext()
}

type Int_expressionContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
	op     antlr.Token
}

func NewEmptyInt_expressionContext() *Int_expressionContext {
	var p = new(Int_expressionContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = TurnkeyParserRULE_int_expression
	return p
}

func (*Int_expressionContext) IsInt_expressionContext() {}

func NewInt_expressionContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *Int_expressionContext {
	var p = new(Int_expressionContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = TurnkeyParserRULE_int_expression

	return p
}

func (s *Int_expressionContext) GetParser() antlr.Parser { return s.parser }

func (s *Int_expressionContext) GetOp() antlr.Token { return s.op }

func (s *Int_expressionContext) SetOp(v antlr.Token) { s.op = v }

func (s *Int_expressionContext) INT() antlr.TerminalNode {
	return s.GetToken(TurnkeyParserINT, 0)
}

func (s *Int_expressionContext) AllInt_expression() []IInt_expressionContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*IInt_expressionContext)(nil)).Elem())
	var tst = make([]IInt_expressionContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(IInt_expressionContext)
		}
	}

	return tst
}

func (s *Int_expressionContext) Int_expression(i int) IInt_expressionContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IInt_expressionContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(IInt_expressionContext)
}

func (s *Int_expressionContext) MUL() antlr.TerminalNode {
	return s.GetToken(TurnkeyParserMUL, 0)
}

func (s *Int_expressionContext) DIV() antlr.TerminalNode {
	return s.GetToken(TurnkeyParserDIV, 0)
}

func (s *Int_expressionContext) ADD() antlr.TerminalNode {
	return s.GetToken(TurnkeyParserADD, 0)
}

func (s *Int_expressionContext) SUB() antlr.TerminalNode {
	return s.GetToken(TurnkeyParserSUB, 0)
}

func (s *Int_expressionContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *Int_expressionContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *Int_expressionContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(TurnkeyParserListener); ok {
		listenerT.EnterInt_expression(s)
	}
}

func (s *Int_expressionContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(TurnkeyParserListener); ok {
		listenerT.ExitInt_expression(s)
	}
}

func (p *TurnkeyParser) Int_expression() (localctx IInt_expressionContext) {
	return p.int_expression(0)
}

func (p *TurnkeyParser) int_expression(_p int) (localctx IInt_expressionContext) {
	var _parentctx antlr.ParserRuleContext = p.GetParserRuleContext()
	_parentState := p.GetState()
	localctx = NewInt_expressionContext(p, p.GetParserRuleContext(), _parentState)
	var _prevctx IInt_expressionContext = localctx
	var _ antlr.ParserRuleContext = _prevctx // TODO: To prevent unused variable warning.
	_startState := 12
	p.EnterRecursionRule(localctx, 12, TurnkeyParserRULE_int_expression, _p)
	var _la int

	defer func() {
		p.UnrollRecursionContexts(_parentctx)
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	var _alt int

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(63)
		p.Match(TurnkeyParserINT)
	}

	p.GetParserRuleContext().SetStop(p.GetTokenStream().LT(-1))
	p.SetState(73)
	p.GetErrorHandler().Sync(p)
	_alt = p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 6, p.GetParserRuleContext())

	for _alt != 2 && _alt != antlr.ATNInvalidAltNumber {
		if _alt == 1 {
			if p.GetParseListeners() != nil {
				p.TriggerExitRuleEvent()
			}
			_prevctx = localctx
			p.SetState(71)
			p.GetErrorHandler().Sync(p)
			switch p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 5, p.GetParserRuleContext()) {
			case 1:
				localctx = NewInt_expressionContext(p, _parentctx, _parentState)
				p.PushNewRecursionContext(localctx, _startState, TurnkeyParserRULE_int_expression)
				p.SetState(65)

				if !(p.Precpred(p.GetParserRuleContext(), 3)) {
					panic(antlr.NewFailedPredicateException(p, "p.Precpred(p.GetParserRuleContext(), 3)", ""))
				}
				{
					p.SetState(66)

					var _lt = p.GetTokenStream().LT(1)

					localctx.(*Int_expressionContext).op = _lt

					_la = p.GetTokenStream().LA(1)

					if !(_la == TurnkeyParserMUL || _la == TurnkeyParserDIV) {
						var _ri = p.GetErrorHandler().RecoverInline(p)

						localctx.(*Int_expressionContext).op = _ri
					} else {
						p.GetErrorHandler().ReportMatch(p)
						p.Consume()
					}
				}
				{
					p.SetState(67)
					p.int_expression(4)
				}

			case 2:
				localctx = NewInt_expressionContext(p, _parentctx, _parentState)
				p.PushNewRecursionContext(localctx, _startState, TurnkeyParserRULE_int_expression)
				p.SetState(68)

				if !(p.Precpred(p.GetParserRuleContext(), 2)) {
					panic(antlr.NewFailedPredicateException(p, "p.Precpred(p.GetParserRuleContext(), 2)", ""))
				}
				{
					p.SetState(69)

					var _lt = p.GetTokenStream().LT(1)

					localctx.(*Int_expressionContext).op = _lt

					_la = p.GetTokenStream().LA(1)

					if !(_la == TurnkeyParserADD || _la == TurnkeyParserSUB) {
						var _ri = p.GetErrorHandler().RecoverInline(p)

						localctx.(*Int_expressionContext).op = _ri
					} else {
						p.GetErrorHandler().ReportMatch(p)
						p.Consume()
					}
				}
				{
					p.SetState(70)
					p.int_expression(3)
				}

			}

		}
		p.SetState(75)
		p.GetErrorHandler().Sync(p)
		_alt = p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 6, p.GetParserRuleContext())
	}

	return localctx
}

// IFloat_expressionContext is an interface to support dynamic dispatch.
type IFloat_expressionContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// GetOp returns the op token.
	GetOp() antlr.Token

	// SetOp sets the op token.
	SetOp(antlr.Token)

	// IsFloat_expressionContext differentiates from other interfaces.
	IsFloat_expressionContext()
}
